--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Docker login
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
+    - name: Docker build
+      run: docker build . --file Dockerfile --tag fmidev/smartmetalert:latest
+    - name: Docker tag
+      run: docker image tag fmidev/smartmetalert:latest fmidev/smartmetalert:$(date +%y.%m.%d)
+    - name: Docker push
+      run: docker push --all-tags fmidev/smartmetalert
